implements hash sharding and sql rewrite